--- a/backEnd/src/pages/home/style/home.css
+++ b/backEnd/src/pages/home/style/home.css
@@ -6,12 +6,14 @@
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
 }
+
 :root {
     --primario: #EEE6E0;
     --secundario: #76323F;
     --terceario: #B8977E;
     --backgroud: #fdfdfd;
 }
+
 body {
     display: flex;
     width: 100%;
@@ -19,24 +21,28 @@ body {
     background: var(--backgroud);
     flex-direction: column;
 }
+
 li {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
 
-.logo{
+.logo {
     display: flex;
     margin-top: 1%;
     margin-left: 1%;
 }
-.nav-menu{
+
+.nav-menu {
     width: 100%;
     box-shadow: 0px 3px 3px #8e9597;
 
 }
-.nav-pesquisa{
+
+.nav-pesquisa {
     display: flex;
     justify-content: flex-end;
     margin-top: 1.5%;
@@ -44,7 +50,7 @@ a {
     margin-bottom: 2%;
 }
 
-.nav-menu .nav-menu-pages ul{
+.nav-menu .nav-menu-pages ul {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -52,24 +58,29 @@ a {
     width: 100%;
 
 }
-.nav-menu-pages ul li{
+
+.nav-menu-pages ul li {
     margin-left: 3%;
     margin-right: 3%;
 }
+
 .nav-menu-pages ul li a {
     font-size: 18px;
     color: var(--secundario);
 }
+
 .nav-menu-pages ul li a:hover {
     font-weight: bold;
-   
+
 }
-.linha{
+
+.linha {
     width: 100%;
     height: 2px;
     background-color: var(--secundario);
 }
-.nav-pesquisa form input{
+
+.nav-pesquisa form input {
     font-family: sans-serif;
     font-size: 1rem;
     background: transparent;
@@ -85,18 +96,21 @@ a {
 
     color: #76323F;
 }
-.nav-pesquisa form img{
+
+.nav-pesquisa form img {
     height: 15px;
 }
-.nav-pesquisa form img:hover{
+
+.nav-pesquisa form img:hover {
     cursor: pointer;
 }
+
 .nav-pesquisa form input:focus {
     border-color: var(--secundario);
 }
 
 
-.page-titulo{
+.page-titulo {
     margin-top: 2%;
     margin-bottom: 2%;
     display: flex;
@@ -104,34 +118,41 @@ a {
     justify-content: center;
     align-items: center;
 }
-.page-titulo p{
+
+.page-titulo p {
     color: var(--terceario);
 }
-.livros{
+
+.livros {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
-.card-livro{
+
+.card-livro {
     border-radius: 10px;
     box-shadow: 0px 4px 4px #35484f;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 300px; 
-}
-.card-livro img{
-    cursor: pointer;
-    height: 250px;
-    width: 250px; 
+    width: 300px;
+    margin-top: 3rem;
 }
 
-.card-livro h3{
+.card-livro img {
+    cursor: pointer;
+    height: 250px;
+    width: 250px;
+}
+
+.card-livro h3 {
     color: var(--secundario);
     text-decoration: underline;
 }
-.card-livro strong{
+
+.card-livro strong {
     margin-bottom: 2%;
 }
