--- a/backEnd/src/pages/home/style/home.css
+++ b/backEnd/src/pages/home/style/home.css
@@ -126,6 +126,7 @@ a {
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding: 1rem;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
