--- a/backEnd/src/pages/profile/style/style.css
+++ b/backEnd/src/pages/profile/style/style.css
@@ -109,14 +109,14 @@ a {
     border-color: var(--secundario);
 }
 
-.card-all{
+.card-all {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.card{
+.card {
     display: flex;
     justify-content: space-evenly;
     width: 50%;
@@ -126,7 +126,7 @@ a {
     flex-direction: column;
 }
 
-.data-user{
+.data-user {
     display: flex;
     justify-content: space-around;
 
@@ -135,24 +135,23 @@ a {
     height: 40%;
 }
 
-.data-user p{
+.data-user p {
     margin-bottom: 1rem;
 }
 
-.btn{
+.btn {
     display: flex;
     justify-content: space-around;
 }
 
-.btn a{
-    align-items: center;
+.btn a {
     align-items: center;
     width: 31%;
     height: 2rem;
     border-radius: 0.5rem;
-    background: var(--primario);
+    background: var(--secundario);
     cursor: pointer;
-    color: var(--secundario);
+    color: var(--primario);
     display: flex;
     justify-content: center;
 }
