--- a/backEnd/src/pages/book_register/style/style.css
+++ b/backEnd/src/pages/book_register/style/style.css
@@ -14,7 +14,6 @@
     --backgroud: #fdfdfd;
 }
 
-
 body {
     width: 100vw;
     height: 100vh;
@@ -31,6 +30,7 @@ body {
 li {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
@@ -40,15 +40,18 @@ a {
     margin-top: 1%;
     margin-left: 1%;
 }
+
 .nav-menu{
     width: 100%;
 }
-.nav-pesquisa{
+
+.nav-search{
     display: flex;
     justify-content: flex-end;
     margin-top: 1.5%;
     margin-right: 2%;
 }
+
 .nav-menu .nav-menu-pages ul{
     display: flex;
     flex-direction: row;
@@ -57,24 +60,28 @@ a {
     width: 100%;
 
 }
+
 .nav-menu-pages ul li{
     margin-left: 3%;
     margin-right: 3%;
 }
+
 .nav-menu-pages ul li a {
     font-size: 18px;
     color: var(--secundario);
 }
+
 .nav-menu-pages ul li a:hover {
     font-weight: bold;
-   
 }
-.linha{
+
+.line{
     width: 100%;
     height: 2px;
     background-color: var(--secundario);
 }
-.nav-pesquisa form input{
+
+.nav-search form input{
     font-family: sans-serif;
     font-size: 1rem;
     background: transparent;
@@ -90,13 +97,16 @@ a {
 
     color: #76323F;
 }
-.nav-pesquisa form img{
+
+.nav-search form img{
     height: 15px;
 }
-.nav-pesquisa form img:hover{
+
+.nav-search form img:hover{
+   
     cursor: pointer;
 }
-.nav-pesquisa form input:focus {
+.nav-search form input:focus {
     border-color: var(--secundario);
 }
 
@@ -126,6 +136,7 @@ a {
 
 .form-book label, textarea {
     position: relative;
+    margin-bottom: 1rem;
 }
 
 .form-book label input, textarea{
@@ -172,6 +183,7 @@ a {
 
 .form-book .synopsis {
     top: 27%;
+    margin-bottom: 0;
 }
 
 .form-book label input:focus+p,
@@ -181,11 +193,9 @@ a {
     color: #070002;
 }
 
-
 .form-book label input:not(:focus)+p, textarea:not(:focus)+p {
     color: #070002;
 } 
-
 
 .form-book button {
     font-display: flex;
@@ -203,7 +213,6 @@ a {
     font-size: 1.2rem;
 
 }
-
 
 #map {
     width: 47vw;
