--- a/backEnd/src/pages/mybooks/style/style.css
+++ b/backEnd/src/pages/mybooks/style/style.css
@@ -135,7 +135,7 @@ a {
 }
 
 
-.livros {
+.books {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -144,7 +144,7 @@ a {
     flex-wrap: wrap;
 }
 
-.card-livro {
+.card-book {
     border-radius: 10px;
     box-shadow: 0px 4px 10px #35484f;
     display: flex;
@@ -156,7 +156,7 @@ a {
     margin-top: 3rem;
 }
 
-.card-livro img {
+.card-book img {
     cursor: pointer;
     height: 250px;
     width: 250px;
@@ -164,12 +164,12 @@ a {
     border-radius: 30px;
 }
 
-.card-livro h3 {
+.card-book h3 {
     color: var(--secundario);
     text-align: center;
 }
 
-.card-livro strong {
+.card-book strong {
     margin-bottom: 2%;
     width: 90%;
     text-align: justify;
@@ -260,11 +260,11 @@ button {
     margin-top: 1rem;
 }
 
-.id-livro,
+.id-book,
 .button-devolution {
     display: none;
 }
 
-.myLoan {
+.my-loan {
     width: 20rem;
 }
