--- a/backEnd/src/pages/profile/style/style.css
+++ b/backEnd/src/pages/profile/style/style.css
@@ -42,7 +42,7 @@ a {
 
 }
 
-.nav-pesquisa {
+.nav-search {
     display: flex;
     justify-content: flex-end;
     margin-top: 1.5%;
@@ -74,13 +74,13 @@ a {
 
 }
 
-.linha {
+.line {
     width: 100%;
     height: 2px;
     background-color: var(--secundario);
 }
 
-.nav-pesquisa form input {
+.nav-search form input {
     font-family: sans-serif;
     font-size: 1rem;
     background: transparent;
@@ -97,15 +97,15 @@ a {
     color: #76323F;
 }
 
-.nav-pesquisa form img {
+.nav-search form img {
     height: 15px;
 }
 
-.nav-pesquisa form img:hover {
+.nav-search form img:hover {
     cursor: pointer;
 }
 
-.nav-pesquisa form input:focus {
+.nav-search form input:focus {
     border-color: var(--secundario);
 }
 
